// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Project component should match the snapshot 1`] = `
<div>
  <h3>
    Project Name
  </h3>
</div>
`;

exports[`Project Project component should match the snapshot when expanded is true 1`] = `
<div>
  <h3>
    Project Name
  </h3>
  <MiniPalette />
</div>
`;
